@@ -53,7 +53,6 @@
 <li>a directory "src", containing a .pas file for every .xxm and .xxmi file, and the Delphi project files (.dpr, .dof, .cfg)</li>
 <li>a project class definition unit, typically named "xxmp.pas"</li>
 <li>a compiled xxm library ".xxl"</li>
-<li>a hidden signature file "Web.xxmp.~db", used for detecting changes in source files</li>
 </ul>
 
 <p>To transport a website into a live environment, copy only these files:</p>
